k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: wanderlust

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      name: backend-pod
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: raman20260/wanderlust-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: wanderlust
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
  type: NodePort
