k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wanderlust

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: raman20260/wanderlust-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: wanderlust
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
  type: LoadBalancer
