k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: wanderlust
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017



---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-deployment
  namespace: wanderlust

spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo-svc
  replicas: 1

  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo

    spec:
      containers:
      - name: mongo
        image: mongo:7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: pvc
