k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: wanderlust

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      name: redis-pod
      labels:
        app: redis

    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: wanderlust
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
